# PG2_Hochschule_Darmstadt_Praktikums

./: README.md  end
DateiVerarbeitung/: CMakeLists.txt  Praktikum3.docx  dateiverarbeitung.cpp  dateiverarbeitung.h  inputfile.csv  main.cpp  ponys.txt
DateiVerarbeitung/NewFileToTest/: input.txt  output.txt
Decorator/: Orders.pro  dish.cpp  dish.h  dishdecorator.cpp  dishdecorator.h  main.cpp  orders.cpp  orders.h  orders.ui
FileConverter/: FileConverter.rar  inputfile.csv  main.c  test.json
FirstGUI/: CMakeLists.txt  main.cpp  mywwindow.cpp  mywwindow.h  mywwindow.ui
MyGUIprogramm/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
Paint/: Paint.pro  bboxdecorator.cpp  bboxdecorator.h  canvas.cpp  canvas.h  circle.cpp  circle.h  freehand.cpp  freehand.h  graphobj.cpp  graphobj.h  line.cpp  line.h  main.cpp  paint.cpp  paint.h  rectangle.cpp  rectangle.h  scene.cpp  scene.h  triangle.cpp  triangle.h
Praktikum_1_Pony_Hoff/: Praktikum_1_Pony_Hoff.pro  Praktikum_1_Pony_Hoff.rar  a.txt  commands.txt  extrafunktionen.cpp  extrafunktionen.h  islandpferd.cpp  islandpferd.h  main.cpp  pony.cpp  pony.h  ponyhof.cpp  ponyhof.h  ponys.txt  shetlandpony.cpp  shetlandpony.h  stall.cpp  stall.h
SOLID/: main.cpp
abdrahmen/: CMakeLists.txt  main.cpp
build-DateiVerarbeitung-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-FileConverter-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
calculator/: mainwindow.cpp  mainwindow.h  (+1 more)
(+535 files in other folders)
